# OpenNexTools

./: .gitignore  Cargo.toml  README.md  justfile  pyproject.toml
.blender_stubs/bpy/app/: __init__.pyi
.github/workflows/: ci.yml
benchmarks/: color_id.py
nextools/: __init__.py  blender_manifest.toml  nt_rust_core.pyi  operators.py  panel.py  rust_bridge.py
nextools/logic/: color_id.py  uv_morph.py
nextools/logic/uv/: rectify.py  straight.py
nextools/ops/: color_id.py  uv.py  uv_morph.py
nextools/ui/: panel.py
nextools/utils/: profiler.py
src/: algorithm.rs  lib.rs
src/algorithm/: color_id.rs  dsu.rs
tests/: run_tests.py  test_color_id.py  test_sample.py
tests/uv/: test_rectify.py  test_straight.py  test_uv_morph.py
