[project]
name = "nextools"
version = "0.0.1"
description = "Blender Addon: nextools"
authors = [
    {name = "unclepomedev"}
]
requires-python = ">=3.11"
dependencies = ["pip"] # pip is for suppressing PyCharm warning

[dependency-groups]
dev = [
    "maturin>=1.11.5",
    "ruff>=0.14.11",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "."
module-name = "nextools.nt_rust_core"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100

[tool.uv]
package = true
